Create json config file containing the logging endpoint(s) intended to log to; Add it to a list of loggers within the app and push to all of the enabled endpoints

--- a/deploy.yaml
+++ b/deploy.yaml
@@ -16,6 +16,8 @@ spec:
       containers:
       - name: app-test 
         image: echalhoub/app_test
+      - name: another-app-test
+        image: echalhoub/another_app_test
       - name: sidecar-test
         image: echalhoub/app_sidecar
         env:
