--- a/sidecar/Dockerfile
+++ b/sidecar/Dockerfile
@@ -1,8 +1,9 @@
 FROM python:3.8
-RUN pip install kubernetes
+RUN pip install kubernetes python3-logstash
 
 WORKDIR /code
-
 COPY src/ .
+COPY config.json ./config/config.json
 
-CMD ["python", "./sidecar.py"]
+CMD ["python", "./sidecar.py", "config/config.json"]
+
